--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.14",
     "multer": "^1.4.2",
+    "normalize-email": "^1.1.1",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "pg": "^8.0.2",
