--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "set NODE_ENV=prod&& node app.js",
-    "dev": "set NODE_ENV=dev&& nodemon app.js"
+    "start": "set NODE_ENV=prod forever app.js",
+    "dev": "set NODE_ENV=dev nodemon app.js"
   },
   "keywords": [],
   "author": "",
