--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "force-https": "^1.0.2",
+    "json2xls": "^0.1.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.14",
     "multer": "^1.4.2",
