--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cpf-cnpj-validator": "^1.0.2",
     "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "email-validator": "^2.0.4",
@@ -26,12 +27,14 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.14",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.10",
     "normalize-email": "^1.1.1",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "pg": "^8.0.2",
     "query-string": "^6.12.1",
     "randomstring": "^1.1.5",
+    "request": "^2.88.2",
     "sharp": "^0.25.2",
     "uuid": "^7.0.3",
     "validator": "^13.0.0",
