--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "normalize-email": "^1.1.1",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
+    "password-generator": "^2.3.2",
     "pg": "^8.0.2",
     "query-string": "^6.12.1",
     "randomstring": "^1.1.5",
