--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
+    "fastest-validator": "^1.5.1",
     "force-https": "^1.0.2",
     "json2xls": "^0.1.2",
     "jsonwebtoken": "^8.5.1",
