--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "json2xls": "^0.1.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.14",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "normalize-email": "^1.1.1",
