--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "set NODE_ENV=prod &&  forever start app.js",
-    "dev": "set NODE_ENV=dev && nodemon app.js"
+    "start": "set NODE_ENV=prod &&  forever start server.js",
+    "dev": "set NODE_ENV=dev && nodemon server.js",
+    "test": "jest --silent"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.663.0",
-    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
@@ -25,15 +25,12 @@
     "express-validator": "^6.4.0",
     "fastest-validator": "^1.5.1",
     "force-https": "^1.0.2",
-    "json2xls": "^0.1.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.14",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "normalize-email": "^1.1.1",
-    "passport": "^0.4.1",
-    "passport-facebook": "^3.0.0",
     "password-generator": "^2.3.2",
     "pg": "^8.0.2",
     "query-string": "^6.12.1",
@@ -41,7 +38,10 @@
     "request": "^2.88.2",
     "sharp": "^0.25.2",
     "uuid": "^7.0.3",
-    "validator": "^13.0.0",
+    "validator": "^13.1.1",
     "validatorjs": "^3.18.1"
+  },
+  "devDependencies": {
+    "jest": "^26.4.0"
   }
 }
