--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,19 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",                                            
-    "esModuleInterop": true, 
+    "outDir": "./dist",   
     "target": "es5",                          
-    "module": "commonjs",   
-    "allowJs": true,     
-    "skipLibCheck": true,                     
-    "forceConsistentCasingInFileNames": true  
-  }
+    "module": "commonjs",                       
+    "esModuleInterop": true,                  
+    "allowJs": true,                     
+    "skipLibCheck": true,                    
+    "forceConsistentCasingInFileNames": true 
+  },
+  "include": [
+    "src/**/*.ts", "src/**/*.js"
+  ],
+  "exclude": [
+    "node_modules",
+    ".vscode"
+  ]
 }
+
